# MechaEngine

./: .gitignore
src/: CMakeLists.txt  engine_setup.cpp  engine_setup.h  fileops.cpp  fileops.h  main.cpp  window_setup.cpp  window_setup.h
